kubernetes/legacy/apps/adguard-home/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "adguard-home.k8s.local"
  rules:
    - backendRefs:
        - name: adguard-home
          port: 3000
